syntax = "proto3";

package annotation.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/airdb/xadmin-api/genproto/annotation/v1;annov1";
option java_multiple_files = true;
option java_outer_classname = "ExtendsProto";
option java_package = "com.github.airdb.xadmin-api.annotation.v1";

extend google.protobuf.FileOptions {
  optional string file_option = 50000;
}

extend google.protobuf.MessageOptions {
  optional int32 message_option = 50001;
}

extend google.protobuf.FieldOptions {
  optional FieldDescriptor field_option = 50002;
}

extend google.protobuf.OneofOptions {
  optional int64 oneof_option = 50003;
}

extend google.protobuf.EnumOptions {
  optional bool enum_option = 50004;
}

extend google.protobuf.EnumValueOptions {
  optional uint32 enum_value_option = 50005;
}

extend google.protobuf.ServiceOptions {
  optional bool service_option = 50006;
}

extend google.protobuf.MethodOptions {
  optional bool method_option = 50007;
}

message MessageDescriptor {
  // The the FieldMask paths mapping.
  map<string, string> mask_map = 1;

  repeated string default_field_actions = 2;
}

// The resource field descriptor.
message FieldDescriptor {
  // The field valid condition.
  //
  // @Kit:
  //  options: [*, list, get, create, update]
  repeated string actions = 1;

  // The the field tags.
  map<string, string> tags = 3;
}
